tests/lean/exitAfterParseError.lean.expected.out
exitAfterParseError.lean:3:7-5:5: error: unexpected token '#exit'; expected ':=', 'where' or '|'
exitAfterParseError.lean:5:0-5:5: warning: using 'exit' to interrupt Lean
